syntax = "proto3";
package core.protos.connectors;

import "google/protobuf/wrappers.proto";
import "core/protos/base.proto";
import "core/protos/connectors/connector.proto";
import "google/protobuf/struct.proto";

message CoralogixDashboardWidgetAssetModel {
  message Widget {
    google.protobuf.StringValue widget_id = 1;
    google.protobuf.StringValue widget_type = 2;
    google.protobuf.StringValue widget_title = 3;
    google.protobuf.StringValue widget_query = 4;
    google.protobuf.Struct widget_config = 5;
    google.protobuf.Struct widget_json = 6;
  }
  
  google.protobuf.StringValue dashboard_id = 1;
  google.protobuf.StringValue dashboard_title = 2;
  google.protobuf.Struct dashboard_json = 3;
  repeated Widget widgets = 4;
}

message CoralogixDashboardAssetOptions {
  message CoralogixDashboardOptions {
    google.protobuf.StringValue dashboard_id = 1;
    google.protobuf.StringValue dashboard_title = 2;
  }
  repeated CoralogixDashboardOptions dashboards = 1;
}

message CoralogixAssetModel {
  google.protobuf.UInt64Value id = 1;
  Source connector_type = 2;
  SourceModelType type = 3;
  sfixed64 last_updated = 4;
  oneof asset {
    CoralogixDashboardWidgetAssetModel coralogix_dashboard = 5;
    CoralogixIndexMappingAssetModel coralogix_index_mapping = 6;
  }
}

message CoralogixIndexMappingAssetModel {
  google.protobuf.StringValue index_name = 1;
  google.protobuf.StringValue index_pattern = 2;
  google.protobuf.Struct mapping_data = 3;
  google.protobuf.StringValue mapping_type = 4;
  google.protobuf.StringValue description = 5;
}

message CoralogixIndexMappingAssetOptions {
  message CoralogixIndexMappingOptions {
    google.protobuf.StringValue index_name = 1;
    google.protobuf.StringValue index_pattern = 2;
  }
  repeated CoralogixIndexMappingOptions index_mappings = 1;
}

message CoralogixAssets {
  repeated CoralogixAssetModel assets = 1;
}